--- a/MemeMe 2.0/Base.lproj/Main.storyboard
+++ b/MemeMe 2.0/Base.lproj/Main.storyboard
@@ -120,6 +120,7 @@
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yvh-UP-G97">
                                             <rect key="frame" x="0.0" y="0.0" width="104" height="104"/>
+                                            <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="104" id="Jus-bj-JXf"/>
                                                 <constraint firstAttribute="width" constant="104" id="Qca-fl-0Kf"/>
@@ -135,6 +136,7 @@
                                 <size key="customSize" width="104" height="104"/>
                                 <connections>
                                     <outlet property="memeImage" destination="Yvh-UP-G97" id="YLk-a3-o70"/>
+                                    <segue destination="xVw-c3-DRi" kind="show" identifier="ShowCollection" id="u3L-AZ-J2v"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -144,9 +146,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="WcV-sP-y2y">
-                        <barButtonItem key="leftBarButtonItem" title="Create" id="xRE-wX-EAO">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="xRE-wX-EAO">
                             <connections>
-                                <action selector="createMeme:" destination="fMu-mC-oQg" id="t5a-SW-zm1"/>
+                                <segue destination="w6g-oh-MRl" kind="presentation" identifier="AddCollection" id="4Nq-51-xvE"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -238,7 +240,6 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="GCG-b9-Bp9"/>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="DH5-Gj-vBT"/>
                                 </items>
                             </toolbar>
                         </subviews>
@@ -286,7 +287,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PIc-tK-5AC" sceneMemberID="firstResponder"/>
                 <exit id="w5s-cf-UND" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1588" y="-486"/>
+            <point key="canvasLocation" x="2409" y="-457"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1UX-da-ZnM">
@@ -304,10 +305,11 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yJ8-MM-fz8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1425" y="-1340"/>
+            <point key="canvasLocation" x="1732" y="363"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="HrD-fF-0y1"/>
+        <segue reference="4Nq-51-xvE"/>
+        <segue reference="u3L-AZ-J2v"/>
     </inferredMetricsTieBreakers>
 </document>
