--- a/MemeMe 2.0/Screens/Base.lproj/Main.storyboard
+++ b/MemeMe 2.0/Screens/Base.lproj/Main.storyboard
@@ -4,7 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -128,7 +128,7 @@
                                             </constraints>
                                         </imageView>
                                         <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qVk-uF-B5g">
-                                            <rect key="frame" x="8" y="8" width="20" height="20"/>
+                                            <rect key="frame" x="24" y="28" width="20" height="20"/>
                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8WJ-gV-KfW">
                                                 <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -191,11 +191,11 @@
             </objects>
             <point key="canvasLocation" x="632.79999999999995" y="246.9265367316342"/>
         </scene>
-        <!--Item-->
+        <!--Table View-->
         <scene sceneID="aUf-LG-gAS">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AIy-6e-ycw" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="JRv-Xy-Wye"/>
+                    <tabBarItem key="tabBarItem" title="Table View" image="table" id="JRv-Xy-Wye"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="eRm-DS-MA7">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -214,7 +214,7 @@
         <scene sceneID="CB9-sp-HHx">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MmX-ps-jN7" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Collection View" id="9eB-9Q-T2t"/>
+                    <tabBarItem key="tabBarItem" title="Collection View" image="collection" id="9eB-9Q-T2t"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="YWQ-WH-fx0">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -277,7 +277,7 @@
                                 </items>
                             </toolbar>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="4tX-Kw-Ads" secondAttribute="trailing" id="1nJ-tv-lYE"/>
                             <constraint firstAttribute="trailingMargin" secondItem="e0L-MK-lvk" secondAttribute="trailing" id="529-mO-Xe3"/>
@@ -343,10 +343,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="collection" width="30" height="30"/>
         <image name="delete" width="16" height="16"/>
+        <image name="table" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="4Nq-51-xvE"/>
-        <segue reference="u3L-AZ-J2v"/>
+        <segue reference="HrD-fF-0y1"/>
     </inferredMetricsTieBreakers>
 </document>
