--- a/MemeMe 2.0/Screens/Base.lproj/Main.storyboard
+++ b/MemeMe 2.0/Screens/Base.lproj/Main.storyboard
@@ -75,7 +75,6 @@
                                 <connections>
                                     <outlet property="memeThumbnail" destination="x7H-r0-bFE" id="9M3-c0-pyG"/>
                                     <outlet property="topBottomDescription" destination="PMk-bY-sTg" id="pst-dz-3dk"/>
-                                    <segue destination="xVw-c3-DRi" kind="show" identifier="Show" id="HrD-fF-0y1"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -166,7 +165,6 @@
                                 <connections>
                                     <outlet property="deleteButtonBlurView" destination="qVk-uF-B5g" id="gtI-aR-2BP"/>
                                     <outlet property="memeImage" destination="Yvh-UP-G97" id="YLk-a3-o70"/>
-                                    <segue destination="xVw-c3-DRi" kind="show" identifier="ShowCollection" id="u3L-AZ-J2v"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -242,7 +240,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" verticalCompressionResistancePriority="755" translatesAutoresizingMaskIntoConstraints="NO" id="y2t-hz-hsk" userLabel="ImageView">
-                                <rect key="frame" x="16" y="64" width="343" height="510"/>
+                                <rect key="frame" x="16" y="64" width="343" height="559"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Top Text" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4tX-Kw-Ads" userLabel="Top Text">
                                 <rect key="frame" x="16" y="108" width="343" height="23"/>
@@ -252,14 +250,14 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" spellCheckingType="yes" returnKeyType="done"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Bottom" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Bottom Text" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e0L-MK-lvk" userLabel="Bottom text">
-                                <rect key="frame" x="16" y="500" width="343" height="30"/>
+                                <rect key="frame" x="16" y="549" width="343" height="30"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="textColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" spellCheckingType="yes" returnKeyType="done"/>
                             </textField>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cfU-WV-tHH">
-                                <rect key="frame" x="0.0" y="532" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="581" width="375" height="44"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="VXr-16-CjE"/>
                                     <barButtonItem systemItem="camera" id="4TS-zh-vCQ">
@@ -321,7 +319,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PIc-tK-5AC" sceneMemberID="firstResponder"/>
                 <exit id="w5s-cf-UND" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2409" y="-457"/>
+            <point key="canvasLocation" x="2553" y="-457"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1UX-da-ZnM">
@@ -339,7 +337,39 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yJ8-MM-fz8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1732" y="363"/>
+            <point key="canvasLocation" x="1777" y="-457"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="2hM-W9-pkZ">
+            <objects>
+                <viewController storyboardIdentifier="DetailView" id="fCd-07-GNe" customClass="DetailViewController" customModule="MemeMe_2_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zIJ-Dh-Xxh"/>
+                        <viewControllerLayoutGuide type="bottom" id="Gjy-vM-Hqp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kCZ-9I-8iv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w6T-AQ-jyu">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="w6T-AQ-jyu" secondAttribute="trailing" id="AJ6-lw-0e2"/>
+                            <constraint firstItem="w6T-AQ-jyu" firstAttribute="top" secondItem="zIJ-Dh-Xxh" secondAttribute="bottom" id="GnJ-dG-qeo"/>
+                            <constraint firstAttribute="bottom" secondItem="w6T-AQ-jyu" secondAttribute="bottom" id="c5G-zK-9qa"/>
+                            <constraint firstItem="w6T-AQ-jyu" firstAttribute="leading" secondItem="kCZ-9I-8iv" secondAttribute="leading" id="hm3-gc-I89"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="memedImage" destination="w6T-AQ-jyu" id="Owg-Km-Vtx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aIV-Dq-XDg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2553" y="311"/>
         </scene>
     </scenes>
     <resources>
@@ -348,7 +378,6 @@
         <image name="table" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4Nq-51-xvE"/>
-        <segue reference="HrD-fF-0y1"/>
+        <segue reference="fqt-MT-pSQ"/>
     </inferredMetricsTieBreakers>
 </document>
